@@ -1,10 +1,10 @@
 // 
-// Unit tests for CustomAttributeRocks
+// Unit tests for FieldRocks
 //
 // Authors:
 //	Sebastien Pouliot  <sebastien@ximian.com>
 //
-// Copyright (C) 2007 Novell, Inc (http://www.novell.com)
+// Copyright (C) 2008 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -36,53 +36,62 @@ using NUnit.Framework;
 namespace Test.Framework.Rocks {
 
 	[TestFixture]
-	public class CustomAttributeRocksTest {
+	public class FieldRocksTest {
+
+		[System.Runtime.CompilerServices.CompilerGeneratedAttribute]
+		private static int cga = 1;
+
+		[System.CodeDom.Compiler.GeneratedCodeAttribute ("unit test", "1.0")]
+		protected double gca = 1.0;
 
 		private AssemblyDefinition assembly;
+
+		private TypeDefinition type;
 
 		[TestFixtureSetUp]
 		public void FixtureSetUp ()
 		{
 			string unit = Assembly.GetExecutingAssembly ().Location;
 			assembly = AssemblyFactory.GetAssembly (unit);
+			type = assembly.MainModule.Types ["Test.Framework.Rocks.FieldRocksTest"];
+		}
+
+		private FieldDefinition GetField (string fieldName)
+		{
+			foreach (FieldDefinition field in type.Fields) {
+				if (field.Name == fieldName)
+					return field;
+			}
+			Assert.Fail ("Field {0} was not found.", fieldName);
+			return null;
 		}
 
 		[Test]
 		[ExpectedException (typeof (ArgumentNullException))]
-		public void Contains_Null ()
+		public void HasAttribute_Null ()
 		{
-			CustomAttributeCollection cac = new CustomAttributeCollection (null);
-			cac.ContainsType ((string) null);
+			GetField ("assembly").HasAttribute (null);
 		}
 
 		[Test]
-		public void Contains ()
+		public void HasAttribute ()
 		{
-			TypeDefinition type = assembly.MainModule.Types ["Test.Framework.Rocks.CustomAttributeRocksTest"];
-			CustomAttributeCollection cac = type.CustomAttributes;
-			Assert.IsTrue (cac.ContainsType ("NUnit.Framework.TestFixtureAttribute"), "NUnit.Framework.TestFixtureAttribute");
-			Assert.IsFalse (cac.ContainsType ("NUnit.Framework.TestFixture"), "NUnit.Framework.TestFixture");
+			Assert.IsTrue (GetField ("cga").HasAttribute ("System.Runtime.CompilerServices.CompilerGeneratedAttribute"), "CompilerGeneratedAttribute");
+			Assert.IsFalse (GetField ("cga").HasAttribute ("NUnit.Framework.TestFixtureAttribute"), "TestFixtureAttribute");
 		}
 
 		[Test]
-		[ExpectedException (typeof (ArgumentNullException))]
-		public void ContainsAny_Null ()
+		public void IsGeneratedCode_CompilerGenerated ()
 		{
-			CustomAttributeCollection cac = new CustomAttributeCollection (null);
-			cac.ContainsAnyType (null);
+			Assert.IsTrue (GetField ("cga").IsGeneratedCode (), "IsCompilerGenerated");
+			Assert.IsFalse (GetField ("assembly").IsGeneratedCode (), "FixtureSetUp");
 		}
 
 		[Test]
-		public void ContainsAny ()
+		public void IsGeneratedCode_GeneratedCode ()
 		{
-			TypeDefinition type = assembly.MainModule.Types ["Test.Framework.Rocks.CustomAttributeRocksTest"];
-			CustomAttributeCollection cac = type.CustomAttributes;
-			Assert.IsTrue (cac.ContainsAnyType (new string[] {
-				"NUnit.Framework.TestFixtureAttribute",
-				null,
-				"System.ICloneable"
-			}), "NUnit.Framework.TestFixtureAttribute");
-			Assert.IsFalse (cac.ContainsAnyType (new string[] {}), "NUnit.Framework.TestFixture");
+			Assert.IsTrue (GetField ("gca").IsGeneratedCode (), "IsCompilerGenerated");
+			Assert.IsFalse (GetField ("assembly").IsGeneratedCode (), "FixtureSetUp");
 		}
 	}
 }
